--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <meta charset="UTF-8">
 </head>
 <body>
-
-<div class="left">
-      <a href="#" class="open">&rarr;</a>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-  
-
+<!-- MH changed navigation menu -->
+<nav>
+<a href="#" class="nav-toggle-btn"></a>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>   
+</nav>
+<!-- MH added div for content -->
 </div>
+<div class="content">
+ <h1 class="center">Humane Society</h1>
+</div>
+ 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
 </body>
