updating nav bar to match changes from Kevin

--- a/gallery.html
+++ b/gallery.html
@@ -7,17 +7,17 @@
     <meta charset="UTF-8">
 </head>
 <body>
-
-<div class="left">
-      <a href="#" class="open">&rarr;</a>
+<nav>
+<a href="#" class="nav-toggle-btn"></a>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
   </ul>
-  
-
+</nav>
 </div>
+<div class="content"></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
 </body>
