--- a/about.html
+++ b/about.html
@@ -7,22 +7,19 @@
     <meta charset="UTF-8">
 </head>
 <body>
-
-  <div class="left">
-      <a href="#" class="open">&rarr;</a>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-
-  </div>
-
-
-  <h1 class="center">About our Organization</h1>
-
-
-
+<nav>
+<a href="#" class="nav-toggle-btn"></a>
+  <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+</div>
+<div class="content">
+<h1 class="center">About our Organization</h1>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
 </body>
