--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,17 @@
     <meta charset="UTF-8">
 </head>
 <body>
-
-	<div class="left">
-      <a href="#" class="open">&rarr;</a>
-  		<ul class="nav-color">
-    		<li><a href="index.html">Home</a></li>
-    		<li><a href="about.html">About</a></li>
-    		<li><a href="contact.html">Contact</a></li>
-  		</ul>
-	</div>
-
+<nav>
+<a href="#" class="nav-toggle-btn"></a>
+  <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+</div>
+<div class="content">
 	<h1 class="center">Contact the Humane Society</h1>
 		<h2 class="center"> Contact Information
 		</h2>
@@ -42,13 +43,7 @@
 		 			<input type="submit" value="Submit">
 				</form>
 			</p>
-
-
-
-
-
-
-
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
 </body>
