--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,10 @@
 </div>
 <div class="content">
 	<h1 class="center">Contact the Humane Society</h1>
-		<h2 class="center"> Contact Information
-		</h2>
+		<div class="container2">
+			<div class="container1">
+				<div class="col1">
+		<h2 class="center">Contact Information</h2>
 		<form class="center" action="contact page">
 		 Name: <input type="text" name="Name"><br>
 		 Email Address: <input type="text" name="Email Address"><br>
@@ -33,16 +35,23 @@
 				<select name="subject">
 					<option value> </option>
 					<option value="Adopting">Adopting</option>
-					<option value="reporting">Reportingh Animal Cruelty</option>
-					<option value="membership">Becoming a Member</option>
-					<option value="Adopting">Adopting</option>
+					<option value="Reporting">Reporting Animal Cruelty</option>
+					<option value="Membership">Becoming a Member</option>
 					<option value="Employment">Employment</option>
+					<option value="Comment">Comment</option>
 				</select>	
 				<form class="center" action="contact page">
 					<textarea name="question" cols"50" rows="8"></textarea><br>
 		 			<input type="submit" value="Submit">
 				</form>
 			</p>
+		</div>
+		<div class="col2">
+			<!-- Column two start -->
+			<img src = "img/Cat_and_Dog.jpg" width="500px">
+			<!-- Column two end -->
+		</div>
+	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
