--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,9 @@
   </ul>
 </nav>
 </div>
-<div class="content"></div>
+<div class="content">
+<h1 class="center">Gallery of Adorable</h1>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
 </body>
