--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
 				<div class="col1">
 		<h2 class="center">Contact Information</h2>
 		<form class="center" action="contact page">
-		 Name: <input type="text" name="Name"><br>
+		 Name:          <input type="text" name="Name"><br>
 		 Email Address: <input type="text" name="Email Address"><br>
-		 Phone Number: <input type="text" name="Phone Number"><br>
+		 Phone Number:  <input type="text" name="Phone Number"><br>
 		</form>
 
 		<h2 class="center"> Your Question/Concern
@@ -38,11 +38,12 @@
 					<option value="Reporting">Reporting Animal Cruelty</option>
 					<option value="Membership">Becoming a Member</option>
 					<option value="Employment">Employment</option>
-					<option value="Comment">Comment</option>
+					<option value="Comment">General</option>
 				</select>	
 				<form class="center" action="contact page">
-					<textarea name="question" cols"50" rows="8"></textarea><br>
+					<textarea type="text" id="firstname" placeholder="Save a life" class ="imagebox" name="question" cols"50" rows="8"></textarea><br>
 		 			<input type="submit" value="Submit">
+		 			
 				</form>
 			</p>
 		</div>
