--- a/about.html
+++ b/about.html
@@ -18,38 +18,28 @@
 </nav>
 </div>
 <div class="content">
-<h1 class="center">About our Organization</h1>
+<h1 class="center">About Our Organization</h1>
 <div class="container2">
 	<div class="container1">
 		<div class="col1">
 			<!-- Column one start -->
-			<h2>Column 1 Header</h2>
-			<h3>Title</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<h2>About Us</h2>
+			<p>The Humane Society of the United States is the nation’s largest and most effective animal protection organization. We and our affiliates provide hands-on care and services to more than 100,000 animals each year, and we professionalize the field through education and training for local organizations. We are the leading animal advocacy organization, seeking a humane world for people and animals alike. We are driving transformational change in the U.S. and around the world by combating large-scale cruelties such as puppy mills, animal fighting, factory farming, seal slaughter, horse cruelty, captive hunts and the wildlife trade.</p>		
+		<!-- <h3>Title</h3> -->
+			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
-		<h3>Title</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+			<img src = "img/kissingpups.jpeg" width="600px">
 			<!-- Column one end -->
 		</div>
 		<div class="col2">
 			<!-- Column two start -->
-			<h2>Column 2 Header</h2>
-			<h3>Title</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+			<h2>Our Mission Statement</h2>
+			<h3>Primary Focus</h3>
+			<p>The Humane Society of the United States and our affiliates provide direct care to more than 100,000 animals each year—more than any other animal welfare organization—through our sanctuaries, veterinary programs and emergency shelters and rescues. We work to professionalize the field of animal care with our education and training programs.</p>		
 		<h3>Title</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
