more content in index.html and practicing github commits

--- a/index.html
+++ b/index.html
@@ -23,14 +23,8 @@
 	<div class="container1">
 		<div class="col1">
 			<!-- Column one start -->
-			<h2>Column 1 Header</h2>
-			<h3>Title</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+			<h2>Background</h2>
+			<p>The Humane Society of the United States (HSUS), based in Washington, D.C., is an American nonprofit organization founded by journalist Fred Myers and Helen Jones, Larry Andrews, and Marcia Glaser in 1954, to address what they saw as animal-related cruelties of national scope, and to resolve animal welfare problems by applying strategies beyond the resources or abilities of local organizations.[3] In 2013, the Chronicle of Philanthropy identified HSUS as the 136th largest charity in the United States in its Philanthropy 400 listing.[4][5] The group's current major campaigns target five issues: factory farming, animal fighting, the fur trade, puppy mills, and wildlife abuse.[6] The organization works on a full range of animal issues, including companion animals, wildlife, farm animals, horses and other equines, and animals used in research, testing and education.[7]</p>		
 		<h3>Title</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
