--- a/gallery.html
+++ b/gallery.html
@@ -7,18 +7,16 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<nav>
-<a href="#" class="nav-toggle-btn"></a>
+
+<div class="left">
+      <a href="#" class="open">&rarr;</a>
   <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
   </ul>
-</nav>
-</div>
-<div class="content">
-<h1 class="center">Gallery of Adorable</h1>
+  
+
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
