additional content from workshop in class

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav>
-<a href="#" class="nav-toggle-btn"></a>
+<a href="#" class="nav-toggle-btn" ></a>
   <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -23,8 +23,9 @@
 	<div class="container1">
 		<div class="col1">
 			<!-- Column one start -->
-			<h2>About Us</h2>
-			<p>The Humane Society of the United States is the nation’s largest and most effective animal protection organization. We and our affiliates provide hands-on care and services to more than 100,000 animals each year, and we professionalize the field through education and training for local organizations. We are the leading animal advocacy organization, seeking a humane world for people and animals alike. We are driving transformational change in the U.S. and around the world by combating large-scale cruelties such as puppy mills, animal fighting, factory farming, seal slaughter, horse cruelty, captive hunts and the wildlife trade.</p>		
+			<h2>Origins and Founding</h2>
+			<p>HSUS formed after a schism surfaced in the American Humane Association over pound seizure, rodeo, and other issue of policy. The incorporators of HSUS included four people—Larry Andrews, Marcia Glaser, Helen Jones, and Fred Myers—all of whom were active in the leadership of existing local and national groups, who would become its first four employees. They believed that a new kind of organization would strengthen the American humane movement, and they set up HSUS as the "National Humane Society," in Washington, DC to ensure that it could play a strong role in national policy development concerning animal welfare. HSUS's guiding principle was ratified by its national membership in 1956: "The Humane Society of the United States opposes and seeks to prevent all use or exploitation of animals that causes pain, suffering, or fear."
+			</p>		
 		<!-- <h3>Title</h3> -->
 			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
