--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
 </nav>
 </div>
 <div class="content">
- <h1 class="center">Humane Society</h1>
+	<img align="center" src="img/bannerlogo.png">
+ <h1 class="center">Humane Society
+ </h1>
 <div class="container2">
 	<div class="container1">
 		<div class="col1">
 			<!-- Column one start -->
-			<h2>Background</h2>
-			<p>The Humane Society of the United States (HSUS), based in Washington, D.C., is an American nonprofit organization founded by journalist Fred Myers and Helen Jones, Larry Andrews, and Marcia Glaser in 1954, to address what they saw as animal-related cruelties of national scope, and to resolve animal welfare problems by applying strategies beyond the resources or abilities of local organizations.[3] In 2013, the Chronicle of Philanthropy identified HSUS as the 136th largest charity in the United States in its Philanthropy 400 listing.[4][5] The group's current major campaigns target five issues: factory farming, animal fighting, the fur trade, puppy mills, and wildlife abuse.[6] The organization works on a full range of animal issues, including companion animals, wildlife, farm animals, horses and other equines, and animals used in research, testing and education.[7]</p>		
-		<h3>Title</h3>
+			<h2>Overview</h2>
+			<p>The Humane Society of the United States (HSUS), based in Washington, D.C., is an American nonprofit organization founded by journalist Fred Myers and Helen Jones, Larry Andrews, and Marcia Glaser in 1954, to address what they saw as animal-related cruelties of national scope, and to resolve animal welfare problems by applying strategies beyond the resources or abilities of local organizations. In 2013, the Chronicle of Philanthropy identified HSUS as the 136th largest charity in the United States in its Philanthropy 400 listing.The group's current major campaigns target five issues: factory farming, animal fighting, the fur trade, puppy mills, and wildlife abuse. The organization works on a full range of animal issues, including companion animals, wildlife, farm animals, horses and other equines, and animals used in research, testing and education.</p>	
+			<img src = "img/saveanimals.jpg" width="600px">	
+		<!-- <h3>Title</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
 
 			<!-- Column one end -->
 
@@ -40,7 +43,7 @@
 			<!-- Column two start -->
 			<!-- <h2>Column 2 Header</h2> -->
 			<!-- <h3>Title</h3> -->
-			<img src = "img/saveanimals.jpg" width="600px">		
+			<img src="img/hslogo.png" width="100%">	
 		<h3>Title</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
