added banner logo

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,9 @@
 </nav>
 </div>
 <div class="content">
+	<div id="banner">
+		<img src="img/bannerlogo.png">
+	</div>
 	<h1 class="center">Contact the Humane Society</h1>
 		<div class="container2">
 			<div class="container1">
