--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 </nav>
 </div>
 <div class="content">
-	<img align="center" src="img/bannerlogo.png">
- <h1 class="center">Humane Society
+	<div id="banner">
+		<img src="img/bannerlogo.png">
+	</div>
+ <h1 class="center">The Humane Society
  </h1>
 <div class="container2">
 	<div class="container1">
