live streaming puppies

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 			<!-- Column two start -->
 			<!-- <h2>Column 2 Header</h2> -->
 			<!-- <h3>Title</h3> -->
-			<img src="img/hslogo.png" width="100%">	
+			<iframe width="480" height="270" src="http://www.ustream.tv/embed/3981613?html5ui" allowfullscreen webkitallowfullscreen scrolling="no" frameborder="0" style="border: 0 none transparent;"></iframe>
+
 		<h3>Title</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
