content should be updated and ready to go for styling

--- a/index.html
+++ b/index.html
@@ -45,15 +45,10 @@
 			<!-- Column two start -->
 			<!-- <h2>Column 2 Header</h2> -->
 			<!-- <h3>Title</h3> -->
-			<iframe width="480" height="270" src="http://www.ustream.tv/embed/3981613?html5ui" allowfullscreen webkitallowfullscreen scrolling="no" frameborder="0" style="border: 0 none transparent;"></iframe>
+			<iframe width="480" height="290" src="http://www.ustream.tv/embed/3981613?html5ui" allowfullscreen webkitallowfullscreen scrolling="no" frameborder="0" style="border: 0 none transparent;"></iframe>
 
-		<h3>Title</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h3>Relationship to Animal Rights</h3>
+			<p>While HSUS welcomed and benefited from growing social interest in animals, it did not originally embrace the language and philosophy of animal rights. Rather, HSUS representatives expressed their beliefs that animals were "entitled to humane treatment and to equal and fair consideration." Like many of the organizations and individuals associated with humane work, HSUS did try to come to terms with the shift toward rights-based language and arguments. In 1978, attorneys Robert Welborn and Murdaugh Stuart Madden conducted a workshop at the HSUS annual conference, "Can Animal Rights Be Legally Defined?", and assembled constituents passed a resolution to the effect that "animals have the right to live and grow under conditions that are comfortable and reasonably natural... animals that are used by man in any way have the right to be free from abuse, pain, and torment caused or permitted by man... animals that are domesticated or whose natural environment is altered by man have the right to receive from man adequate food, shelter, and care."[40] In 1980 the notion of rights surfaced in an HSUS convention resolution which, noting that "such rights naturally evolve from long accepted doctrines of justice or fairness or some other dimension of morality," called for "pursuit on all fronts... the clear articulation and establishment of the rights of animals"</p>
 			<!-- Column two end -->
 		</div>
 	</div>
