--- a/about.html
+++ b/about.html
@@ -45,13 +45,8 @@
 			<h2>Our Mission Statement</h2>
 			<h3>Primary Focus</h3>
 			<p>The Humane Society of the United States and our affiliates provide direct care to more than 100,000 animals each year—more than any other animal welfare organization—through our sanctuaries, veterinary programs and emergency shelters and rescues. We work to professionalize the field of animal care with our education and training programs.</p>		
-		<h3>Title</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h3>Goals</h3>
+			<p>Other broad goals during this time included a reduction in the U.S.’s homeless dog and cat population, the reform of inhumane euthanasia practices, and to regulate pet shops and to end the commercial pet breeding trade. HSUS and its state branches operated animal shelters in Waterford, Virginia, Salt Lake City Utah, and Boulder, Colorado, and elsewhere, during the 1960s, and part of the 1970s. Today, HSUS operates five animal sanctuaries in the states of California, Florida Massachusetts, Oregon, and Texas.</p>
 			<!-- Column two end -->
 		</div>
 	</div>
