updating gallery, fonts & menu button

--- a/about.html
+++ b/about.html
@@ -4,10 +4,11 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Ribeye|Dosis:500' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
 </head>
 <body>
-<nav>
+<nav><img src="img/menu.png" class="nav-toggle-btn">
 <a href="#" class="nav-toggle-btn" ></a>
   <ul>
       <li><a href="index.html">Home</a></li>
@@ -41,7 +42,7 @@
 		</div>
 		<div class="col2">
 			<!-- Column two start -->
-			<img src = "img/kitten.jpeg" height="290px" width="500px">	
+			<img src = "img/kitten.jpeg" width="500px">	
 			<h2>Our Mission Statement</h2>
 			<h3>Primary Focus</h3>
 			<p>The Humane Society of the United States and our affiliates provide direct care to more than 100,000 animals each year—more than any other animal welfare organization—through our sanctuaries, veterinary programs and emergency shelters and rescues. We work to professionalize the field of animal care with our education and training programs.</p>		
