--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Ribeye|Dosis:500' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
 </head>
 <body>
-<nav>
+<nav><img src="img/menu.png" class="nav-toggle-btn">
 <a href="#" class="nav-toggle-btn"></a>
   <ul>
       <li><a href="index.html">Home</a></li>
@@ -32,11 +33,10 @@
 		 Phone Number:  <input type="text" name="Phone Number"><br>
 		</form>
 
-		<h2 class="center"> Your Question/Concern
-		</h2>
-			<p class="center">
+		<h2 class="center"> Your Question/Concern</h2>
+			<div class="center">
 				<select name="subject">
-					<option value> </option>
+					<option value>Choose one</option>
 					<option value="Adopting">Adopting</option>
 					<option value="Reporting">Reporting Animal Cruelty</option>
 					<option value="Membership">Becoming a Member</option>
@@ -44,11 +44,10 @@
 					<option value="Comment">General</option>
 				</select>	
 				<form class="center" action="contact page">
-					<textarea type="text" id="firstname" placeholder="Save a life" class ="imagebox" name="question" cols"50" rows="8"></textarea><br>
-		 			<input type="submit" value="Submit">
-		 			
+					<textarea type="text" id="firstname" placeholder="Save a life" class="imagebox" name="question" cols="50" rows="8"></textarea><br>
+		 			<input type="submit" value="Submit"> 			
 				</form>
-			</p>
+			</div>
 		</div>
 		<div class="col2">
 			<!-- Column two start -->
