--- a/gallery.html
+++ b/gallery.html
@@ -4,20 +4,40 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Ribeye|Dosis:500' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
 </head>
 <body>
-
-<div class="left">
-      <a href="#" class="open">&rarr;</a>
+<nav><img src="img/menu.png" class="nav-toggle-btn">
+<a href="#" class="nav-toggle-btn"></a>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
   </ul>
-  
-
-</div>
+</nav>
+<div class="content">
+  <div id="banner">
+    <img src="img/bannerlogo.png">
+  </div>
+  <h1 class="center">Gallery of Adorable</h1>
+	<div class="container2">
+      <div class="container1">
+  		<div class="col1">
+    		<iframe width="500" height="281" align="middle" src="https://www.youtube.com/embed/4RGHy-jYf3o?rel=0" frameborder="0" allowfullscreen></iframe>
+        <p></p>
+        <iframe width="500" height="281" align="middle" src="https://www.youtube.com/embed/NoA2ilh-A0U?rel=0" frameborder="0" allowfullscreen></iframe>
+  		</div>
+      <div class="col2">
+        <iframe width="500" height="281" align="middle" src="https://www.youtube.com/embed/vV0_jY7tab0?rel=0" frameborder="0" allowfullscreen></iframe>
+        <p></p>
+        <iframe width="500" height="281" align="middle" src="https://www.youtube.com/embed/6qcbC8XLUbI?rel=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+ 	 	</div>
+  	</div>
+    </div>
+</div>  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/fancy.js"></script>
 </body>
