--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 			<div class="container1">
 				<div class="col1">
 		<h2 class="center">Contact Information</h2>
-		<form class="center" action="contact page">
+		<form action="contact page">
 		 Name:          <input type="text" name="Name"><br>
 		 Email Address: <input type="text" name="Email Address"><br>
 		 Phone Number:  <input type="text" name="Phone Number"><br>
